[package]
name = "rudhi"
version = "0.1.0"
authors = ["pv <parshav@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.114"
serde_json = "1.0"
serde_derive = "1.0.114"
dirs = "3.0"
